--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddMovie">New Movie</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://baconsale.com/">My Podcasts</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Podcasts">My Podcasts</a>
                         </li>
                     </ul>
                 </div>
